Fix vibrancy styling for dark mode

--- a/vibrancy.css
+++ b/vibrancy.css
@@ -31,16 +31,6 @@ html.vibrancy ._1qt4 {
 	border-top: solid 1px rgba(0, 0, 0, 0.06);
 }
 
-/* Styles for vibrancy in dark mode */
-html.dark-mode.vibrancy body {
-	background: rgba(0, 0, 0, 0.26) !important;
-}
-
-/* Main container? */
-html.dark-mode.vibrancy ._4sp8 {
-	background: transparent !important;
-}
-
 /* Main content */
 html.dark-mode.vibrancy ._1q5- {
 	background: transparent !important;
